fixed the link between User and Client
